# comet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/comet_flowtools/: __init__.py  _version.py  api.py
src/comet_flowtools/tools/: __init__.py  cli.py  file_ops.py
src/rapcode_interpreter/: __init__.py  interpreter.py  main.py  runner.py
src/raptor_converter/: __init__.py  __main__.py  cli.py
src/raptor_converter/ast/: nodes.py
src/raptor_converter/generation/: base_generator.py  expression_utils.py  graphviz_generator.py  mermaid_generator.py  rapcode_generator.py
src/raptor_converter/parsing/: base_parser.py  expression_parser.py  rapcode_parser.py  raptor_xml_parser.py
src/raptor_converter/utils/: exceptions.py
tests/: __init__.py
tests/fixtures/: area.rap
tests/raptor_converter/: __init__.py  test_expression_parser.py
tests/unit/: test_api.py  test_rapcode_parser.py  test_runner.py  test_tools.py
